[package]
name = "connectionist-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ndarray = { version = "0.15.3", features = ["serde"] }
ndarray-rand = "0.14.0"
ndarray-csv = "0.5.1"
pbr = "1.0.4"
csv = "1.1.6"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"